--- a/hatchback.html
+++ b/hatchback.html
@@ -7,9 +7,14 @@
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./styles_hatchback.css">
     <style>
-        a{
+        .main-menu a{
             color: inherit; 
         }  
+
+        .main-menu a:hover{
+            font-size: 40px;
+            font-style: normal; 
+        }
     </style>
 </head>
 <body>
@@ -22,7 +27,7 @@
                 <a href="sedan.html">Седани</a>
             </li>
             <li>
-                <a href="hatchback.html" id="light_text">Хетчбеки</a>
+                <a href="hatchback.html">Хетчбеки</a>
             </li>
             <li>
                 <a href="crossover.html">Кросовери</a>
@@ -31,7 +36,7 @@
     </div>
     <div class="content">
         <h2>Хетчбек</h2>
-        <p>Хетчбек (англ. hatchback від hatch — «люк» і back — «ззаду») — 
+        <p>Хетчбек <span class="foreign">(англ. hatchback від hatch — «люк» і back — «ззаду»)</span> — 
             це конфігурація кузова автомобіля із задніми дверима, які відкриваються 
             вгору, щоб забезпечити доступ до основного салону автомобіля як до 
             вантажного відділення, а не просто до окремого багажника.. Хетчбеки 
@@ -112,10 +117,8 @@
                 </td>
             </tr>
         </table>
-        
     </div>
-    <div class="footer">
-        
-    </div>
+<div class="footer">
+</div>
 </body>
 </html>
