--- a/sedan.html
+++ b/sedan.html
@@ -7,9 +7,14 @@
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./styles_sedan.css">
     <style>
-        a{
+        .main-menu a{
             color: inherit; 
         }  
+
+        .main-menu a:hover{
+            font-size: 40px;
+            font-style: normal; 
+        }
     </style>
 </head>
 <body>
@@ -19,7 +24,7 @@
                 <a href="index.html">&#8962; Головна</a>
             </li>
             <li>
-                <a href="sedan.html" id="light_text">Седани</a>
+                <a href="sedan.html">Седани</a>
             </li>
             <li>
                 <a href="hatchback.html">Хетчбеки</a>
@@ -49,7 +54,7 @@
         </p>
         <h2>Походження назви</h2>
         <p>Щодо походження терміна існують дві версії. Одна пов'язує 
-            його з англ. sedan («паланкін»), що походить з 
+            його <span class="foreign">з англ. sedan («паланкін»)</span>, що походить з 
             південно-італійського діалекту від слова sedia — «крісло» 
             (перший седан було представлено в Неаполі).
             За іншою версією, слово «седан» утворено від назви 
