--- a/crossover.html
+++ b/crossover.html
@@ -6,10 +6,15 @@
     <title>Кросовери</title>
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./styles_crossover.css">
-    <style>  
-        a{
+    <style>
+        .main-menu a{
             color: inherit; 
         }  
+
+        .main-menu a:hover{
+            font-size: 40px;
+            font-style: normal; 
+        }
     </style>
 </head>
 <body>
@@ -25,69 +30,67 @@
                 <a href="hatchback.html">Хетчбеки</a>
             </li>
             <li>
-                <a href="crossover.html" id="light_text">Кросовери</a>
+                <a href="crossover.html">Кросовери</a>
             </li>
         </ul>
     </div>
     <div class="content">
         <h2>Кросовер</h2>
         <p class="upper-text">
-            Кросовер (англ. crossover utility vehicle (CUV)) — універсал підвищеної прохідності,
+            Кросовер <span class="foreign">(англ. crossover utility vehicle (CUV))</span> — універсал підвищеної прохідності,
              що поєднує в собі риси позашляховика та легкового автомобіля.
         </p>
         <h2>Походження</h2>
-        <div class="info">
-            <div class="pictures">
-                <div class="group">
-                    <a href="./pictures/1987_Lada_Niva_1600.jpg" target="_blank">
-                        <img src="./pictures/1987_Lada_Niva_1600.jpg" alt="Hyundai Tucson" class="car-picture">
-                    </a>
-                    <p>ВАЗ-2121 «Нива» 1997 року є першим позашляховиком з несучим кузовом</p>
-                </div>
-                <div class="group">
-                    <a href="./pictures/1995_Toyota_RAV4_(SXA11R)_Cruiser_wagon_(2015-07-14)_01.jpg" target="_blank">
-                        <img src="./pictures/1995_Toyota_RAV4_(SXA11R)_Cruiser_wagon_(2015-07-14)_01.jpg" alt="Hyundai Tucson" class="car-picture">
-                    </a>
-                    <p>Toyota RAV4 1994 — перший кросовер в сучасному розумінні цього термінму</p>    
-                </div>
-                <div class="group">
-                    <a href="./pictures/1982_AMC_Eagle_4-door_wagon_two-tone_03.jpg" target="_blank">
-                        <img src="./pictures/1982_AMC_Eagle_4-door_wagon_two-tone_03.jpg" alt="Hyundai Tucson" class="car-picture">
-                    </a>
-                    <p>AMC Eagle 1979 — перший американський кросовер</p>
-                </div>                
+        <div class="pictures">
+            <div class="group">
+                <a href="./pictures/1987_Lada_Niva_1600.jpg" target="_blank">
+                    <img src="./pictures/1987_Lada_Niva_1600.jpg" alt="Hyundai Tucson" class="car-picture">
+                </a>
+                <p>ВАЗ-2121 «Нива» 1997 року є першим позашляховиком з несучим кузовом</p>
             </div>
-            <div class="text">
-                <p>
-                    Термін, що походить із Північної Америки, спочатку використовувався для 
-                    будь-якого транспортного засобу, який поєднує в собі характеристики двох 
-                    різних типів транспортних засобів, тоді як з часом кросовер здебільшого 
-                    стосується SUV на базі універсала. Кросовери також описуються як «SUV 
-                    автомобілі» або «автомобілі на базі SUV». Термін позашляховик часто 
-                    використовується як загальний термін як для кросоверів, так і для 
-                    традиційних позашляховиків через схожість між ними.<br>
-                    Кросовери та позашляховики відрізняється тим, що кросовер будується на 
-                    платформі «unibody» з несучим кузовом інтегрованим в раму/шасі, натомість 
-                    позашляховиками вважаються автомобіді побудоувані на платформі де кузов 
-                    встановлений на раму. Однак, на практиці ці терміни часто розмиті і ранні 
-                    позащляховики з несучим кузовом (наприклад, Jeep Cherokee 1984 року) 
-                    рідко називають кросоверами. Через ці невідповідності термін «позашляховик» 
-                    часто використовується як загальний термін як для кросоверів, так і для 
-                    традиційних позашляховиків. Порівняно з традиційними позашляховиками, 
-                    кросовери, менш здатні до використання в умовах бездоріжжя або для 
-                    перевозкм важких вантажів, але натомість пропонують інші переваги, 
-                    такі як чудова економія палива та керованість. Порівняно з традиційними 
-                    автомобілями з меншим дорожнім просвітом і нижчим дахом, такими як седани 
-                    та хетчбеки, кросовери пропонують більше простору у салоні та покращену 
-                    посадку за кермом.<br>
-                    Цікавим є факт, що Лада Нива 1977 року є першим у світі серійним позашляховиком 
-                    з цілісним несучим кузовом і вважається попередником кросоверів до того, як цей 
-                    термін був придуманий і використаний для позначення AMC Eagle 1979, який 
-                    вважаться першим кросовером у США. Toyota RAV4, яка була представлена ​​в 1994 
-                    році, стала одним з перших автомобілів з сучасною концепцією кросовера.<br>
-                    У США частка ринку кросоверів зросла з менш ніж 4% у 2000 році до майже 40% у 2018 році.
-                </p>
+            <div class="group">
+                <a href="./pictures/1995_Toyota_RAV4_(SXA11R)_Cruiser_wagon_(2015-07-14)_01.jpg" target="_blank">
+                    <img src="./pictures/1995_Toyota_RAV4_(SXA11R)_Cruiser_wagon_(2015-07-14)_01.jpg" alt="Hyundai Tucson" class="car-picture">
+                </a>
+                <p>Toyota RAV4 1994 — перший кросовер в сучасному розумінні цього термінму</p>    
             </div>
+            <div class="group">
+                <a href="./pictures/1982_AMC_Eagle_4-door_wagon_two-tone_03.jpg" target="_blank">
+                    <img src="./pictures/1982_AMC_Eagle_4-door_wagon_two-tone_03.jpg" alt="Hyundai Tucson" class="car-picture">
+                </a>
+                <p>AMC Eagle 1979 — перший американський кросовер</p>
+            </div>                
+        </div>
+        <div class="text">
+            <p>
+                Термін, що походить із Північної Америки, спочатку використовувався для 
+                будь-якого транспортного засобу, який поєднує в собі характеристики двох 
+                різних типів транспортних засобів, тоді як з часом кросовер здебільшого 
+                стосується SUV на базі універсала. Кросовери також описуються як «SUV 
+                автомобілі» або «автомобілі на базі SUV». Термін позашляховик часто 
+                використовується як загальний термін як для кросоверів, так і для 
+                традиційних позашляховиків через схожість між ними.<br>
+                Кросовери та позашляховики відрізняється тим, що кросовер будується на 
+                платформі «unibody» з несучим кузовом інтегрованим в раму/шасі, натомість 
+                позашляховиками вважаються автомобіді побудоувані на платформі де кузов 
+                встановлений на раму. Однак, на практиці ці терміни часто розмиті і ранні 
+                позащляховики з несучим кузовом (наприклад, Jeep Cherokee 1984 року) 
+                рідко називають кросоверами. Через ці невідповідності термін «позашляховик» 
+                часто використовується як загальний термін як для кросоверів, так і для 
+                традиційних позашляховиків. Порівняно з традиційними позашляховиками, 
+                кросовери, менш здатні до використання в умовах бездоріжжя або для 
+                перевозкм важких вантажів, але натомість пропонують інші переваги, 
+                такі як чудова економія палива та керованість. Порівняно з традиційними 
+                автомобілями з меншим дорожнім просвітом і нижчим дахом, такими як седани 
+                та хетчбеки, кросовери пропонують більше простору у салоні та покращену 
+                посадку за кермом.<br>
+                Цікавим є факт, що Лада Нива 1977 року є першим у світі серійним позашляховиком 
+                з цілісним несучим кузовом і вважається попередником кросоверів до того, як цей 
+                термін був придуманий і використаний для позначення AMC Eagle 1979, який 
+                вважаться першим кросовером у США. Toyota RAV4, яка була представлена ​​в 1994 
+                році, стала одним з перших автомобілів з сучасною концепцією кросовера.<br>
+                У США частка ринку кросоверів зросла з менш ніж 4% у 2000 році до майже 40% у 2018 році.
+            </p>
         </div>
     </div>
     <div class="footer">
