--- a/crossover.html
+++ b/crossover.html
@@ -16,6 +16,7 @@
             font-style: normal; 
         }
     </style>
+    <script src="./scripts_crossover.js"></script>
 </head>
 <body>
     <div class="header">
