--- a/sedan.html
+++ b/sedan.html
@@ -16,6 +16,7 @@
             font-style: normal; 
         }
     </style>
+    <script src="./scripts_sedan.js"></script>
 </head>
 <body>
     <div class="header">
