--- a/hatchback.html
+++ b/hatchback.html
@@ -16,6 +16,8 @@
             font-style: normal; 
         }
     </style>
+
+    <script src="./scripts_hatchback.js"></script>
 </head>
 <body>
     <div class="header">
@@ -34,7 +36,7 @@
             </li>
         </ul>
     </div>
-    <div class="content">
+    <div class="content" id="main_content">
         <h2>Хетчбек</h2>
         <p>Хетчбек <span class="foreign">(англ. hatchback від hatch — «люк» і back — «ззаду»)</span> — 
             це конфігурація кузова автомобіля із задніми дверима, які відкриваються 
@@ -79,7 +81,7 @@
             горизонтальне розділення на дві частини. Нижня панель тепер була врівень з 
             підлогою, а петлі, встановлені знизу, були посилені.</p>
 
-        <table class="pictures">
+        <!-- <table class="pictures" id="pic">
             <tr>
                 <td>
                     <a href="./pictures/1938_Citroen_hatchback.jpg" target="_blank">
@@ -116,7 +118,8 @@
                     <h3>1966 Jaguar E-Type з дверцятами, що відкриваються в бік</h3>
                 </td>
             </tr>
-        </table>
+        </table> -->
+        <h3 id="pic" style="color: green;">Завантаження...</h3>
     </div>
 <div class="footer">
 </div>
