--- a/crossover.html
+++ b/crossover.html
@@ -19,7 +19,7 @@
     <script src="./scripts_crossover.js"></script>
 </head>
 <body>
-    <div class="header">
+    <!-- <div class="header">
         <ul class="main-menu">
             <li>
                 <a href="index.html">&#8962; Головна</a>
@@ -34,7 +34,16 @@
                 <a href="crossover.html">Кросовери</a>
             </li>
         </ul>
+    </div> -->
+    <div class="header">
+        <ul class="main-menu">
+            <li><button data-behavior="navigate" data-url="index.html">&#8962; Головна</button></li>
+            <li><button data-behavior="navigate" data-url="sedan.html">Седани</button></li>
+            <li><button data-behavior="navigate" data-url="hatchback.html">Хетчбеки</button></li>
+            <li><button data-behavior="navigate" data-url="crossover.html">Кросовери</button></li>
+        </ul>        
     </div>
+    
     <div class="content">
         <h2>Кросовер</h2>
         <p class="upper-text">
