--- a/hatchback.html
+++ b/hatchback.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <div class="header">
-        <ul class="main-menu">
+        <!-- <ul class="main-menu">
             <li>
                 <a href="index.html">&#8962; Головна</a>
             </li>
@@ -34,7 +34,13 @@
             <li>
                 <a href="crossover.html">Кросовери</a>
             </li>
-        </ul>
+        </ul> -->
+        <ul class="main-menu">
+            <li><button data-behavior="navigate" data-url="index.html">&#8962; Головна</button></li>
+            <li><button data-behavior="navigate" data-url="sedan.html">Седани</button></li>
+            <li><button data-behavior="navigate" data-url="hatchback.html">Хетчбеки</button></li>
+            <li><button data-behavior="navigate" data-url="crossover.html">Кросовери</button></li>
+        </ul> 
     </div>
     <div class="content" id="main_content">
         <h2>Хетчбек</h2>
