--- a/sedan.html
+++ b/sedan.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <div class="header">
-        <ul class="main-menu">
+        <!-- <ul class="main-menu">
             <li>
                 <a href="index.html">&#8962; Головна</a>
             </li>
@@ -33,7 +33,13 @@
             <li>
                 <a href="crossover.html">Кросовери</a>
             </li>
-        </ul>
+        </ul> -->
+        <ul class="main-menu">
+            <li><button data-behavior="navigate" data-url="index.html">&#8962; Головна</button></li>
+            <li><button data-behavior="navigate" data-url="sedan.html">Седани</button></li>
+            <li><button data-behavior="navigate" data-url="hatchback.html">Хетчбеки</button></li>
+            <li><button data-behavior="navigate" data-url="crossover.html">Кросовери</button></li>
+        </ul>   
     </div>
     <div class="content">
         <h2>Седан</h2>
@@ -65,24 +71,24 @@
             ім'я «седан» був Speedwell Sedan, розроблений у 1911 
             році компанією Speedwell Motor Co в Огайо.
         </p>
-        <img src="./pictures/Speedwell.jpg" alt="Speedwell Sedan" class="speedwell">
-        <h3>Speedwell Sedan, 1911 р.</h3> 
+        <img src="./pictures/Speedwell.jpg" alt="Speedwell Sedan" class="speedwell" onclick="showCarAlert()">
+        <!-- <h3>Speedwell Sedan, 1911 р.</h3>  -->
     </div>
     <div class="bottom">
-        <div class="advantages">
-            <h2>Переваги седанів</h2>
-            <ul >
+        <div id="advantages">
+            <h2 id="advantages_title">Переваги седанів</h2>
+            <!-- <ul >
                 <li>Комфортний салон.</li>
                 <li>Великий багажник.</li>
                 <li>Стабільність на дорозі.</li>
-            </ul>
+            </ul> -->
         </div>
-        <div class="disadvantages">
+        <div id="disadvantages">
             <h2>Недоліки седанів</h2>
-            <ul>
+            <!-- <ul>
                 <li>Менша прохідність на поганих дорогах.</li>
                 <li>Більші габарити порівняно з хетчбеками.</li>
-            </ul>
+            </ul> -->
         </div>
     </div>
     <div class="footer">
