--- a/index.html
+++ b/index.html
@@ -114,11 +114,6 @@
                     <td><a href="https://auto.ria.com/uk/search/?indexName=auto,order_auto,newauto_search&body.id[1]=5&categories.main.id=1&country.import.usa.not=-1&price.currency=1&abroad.not=0&custom.not=1&page=0&size=10" class="car-link">Обрати кросовер для покупки</a></td>
                 </tr>
                 <tr>
-                    <td><button id="moreInfoSedan">Дізнатись більше про авто</button></td>
-                    <td><button id="moreInfoHatchback">Дізнатись більше про авто</button></td>
-                    <td><button id="moreInfoCrossover">Дізнатись більше про авто</button></td>
-                </tr>
-                <tr>
                     <td>Седани - це класичні легкові автомобілі з окремим багажним відділенням.</td>
                     <td>Хетчбеки - компактні автомобілі зі зручним доступом до багажного відділення.</td>
                     <td>Кросовери - це автомобілі, що поєднують в собі риси позашляховиків і легкових авто.</td>
@@ -347,6 +342,11 @@
         <h2 id="автосалони">Автосалони в Україні<br></h2>
         <iframe src="https://auto.ria.com/uk/newauto/autosalons/?r_source=g_ads&r_medium=search&r_campaign=performance_high_frequency&r_options=paid&r_audience=ppc_buyers_newauto&gad_source=1&gclid=Cj0KCQiAq-u9BhCjARIsANLj-s1mdFl1fJRKxf9Jah_Zur55ZEFV5zQUhMattqU2r_ghpKgbw3K6pHsaAlffEALw_wcB" >
         </iframe>
+    </div>
+    <div class="board">
+        <a href="./board.html">
+            <h2>Перейти на дошку з автомобілями</h2>
+        </a>
     </div>
     <div class="footer" id="footer-index">
     </div>
