--- a/sedan.html
+++ b/sedan.html
@@ -20,20 +20,6 @@
 </head>
 <body>
     <div class="header">
-        <!-- <ul class="main-menu">
-            <li>
-                <a href="index.html">&#8962; Головна</a>
-            </li>
-            <li>
-                <a href="sedan.html">Седани</a>
-            </li>
-            <li>
-                <a href="hatchback.html">Хетчбеки</a>
-            </li>
-            <li>
-                <a href="crossover.html">Кросовери</a>
-            </li>
-        </ul> -->
         <ul class="main-menu">
             <li><button data-behavior="navigate" data-url="index.html">&#8962; Головна</button></li>
             <li><button data-behavior="navigate" data-url="sedan.html">Седани</button></li>
@@ -42,36 +28,40 @@
         </ul>   
     </div>
     <div class="content">
-        <h2>Седан</h2>
-        <p>Седан — триоб'ємний кузов легкового автомобіля з двома 
-            або трьома рядами 2 або 3 сидінь, з чотирма дверима і 
-            багажником, структурно відокремленим від пасажирського 
-            салону. Схожий на хетчбек, але з більшими габаритними 
-            розмірами та збільшеним простором багажника. Заднє скло 
-            у седані завжди жорстко закріплене в рамці і не піднімається, 
-            хоча спинка заднього сидіння може бути або обладнаною лючком, 
-            або відкидатися для перевезення довгих предметів. Однак 
-            4-дверні седани вищі за 5-дверний мінівен, 5-дверний хетчбек, 
-            5-дверний SUV або 5-дверний універсал і 4- Дверні LWB седани 
-            вищі за 5-дверний LWB мінівен, 5-дверний LWB хетчбек, 5-дверний 
-            LWB SUV або 5-дверний LWB універсал. Варіанти стилю седана 
-            включають седан з щільним зчепленням, клубний седан, 
-            седан-кабріолет, седан фастбек, седан з жорстким дахом, 
-            седан із кузовним верхом і седан.
-        </p>
-        <h2>Походження назви</h2>
-        <p>Щодо походження терміна існують дві версії. Одна пов'язує 
-            його <span class="foreign">з англ. sedan («паланкін»)</span>, що походить з 
-            південно-італійського діалекту від слова sedia — «крісло» 
-            (перший седан було представлено в Неаполі).
-            За іншою версією, слово «седан» утворено від назви 
-            французького міста Седан, що спеціалізувалося в XIX 
-            столітті на виробництві дорожніх карет.            
-            Першим автомобілем, на чотирьох осіб, який отримав 
-            ім'я «седан» був Speedwell Sedan, розроблений у 1911 
-            році компанією Speedwell Motor Co в Огайо.
-        </p>
-        <img src="./pictures/Speedwell.jpg" alt="Speedwell Sedan" class="speedwell" onclick="showCarAlert()">
+        <div class="block">
+            <h2>Седан</h2>
+            <p>Седан — триоб'ємний кузов легкового автомобіля з двома 
+                або трьома рядами 2 або 3 сидінь, з чотирма дверима і 
+                багажником, структурно відокремленим від пасажирського 
+                салону. Схожий на хетчбек, але з більшими габаритними 
+                розмірами та збільшеним простором багажника. Заднє скло 
+                у седані завжди жорстко закріплене в рамці і не піднімається, 
+                хоча спинка заднього сидіння може бути або обладнаною лючком, 
+                або відкидатися для перевезення довгих предметів. Однак 
+                4-дверні седани вищі за 5-дверний мінівен, 5-дверний хетчбек, 
+                5-дверний SUV або 5-дверний універсал і 4- Дверні LWB седани 
+                вищі за 5-дверний LWB мінівен, 5-дверний LWB хетчбек, 5-дверний 
+                LWB SUV або 5-дверний LWB універсал. Варіанти стилю седана 
+                включають седан з щільним зчепленням, клубний седан, 
+                седан-кабріолет, седан фастбек, седан з жорстким дахом, 
+                седан із кузовним верхом і седан.
+            </p>
+        </div>
+        <div class="block">
+            <h2>Походження назви</h2>
+            <p>Щодо походження терміна існують дві версії. Одна пов'язує 
+                його <span class="foreign">з англ. sedan («паланкін»)</span>, що походить з 
+                південно-італійського діалекту від слова sedia — «крісло» 
+                (перший седан було представлено в Неаполі).
+                За іншою версією, слово «седан» утворено від назви 
+                французького міста Седан, що спеціалізувалося в XIX 
+                столітті на виробництві дорожніх карет.            
+                Першим автомобілем, на чотирьох осіб, який отримав 
+                ім'я «седан» був Speedwell Sedan, розроблений у 1911 
+                році компанією Speedwell Motor Co в Огайо.
+            </p>
+        </div>
+        <img src="./pictures/Speedwell.jpg" alt="Speedwell Sedan" class="speedwell" onclick="showCarAlert()"> 
         <!-- <h3>Speedwell Sedan, 1911 р.</h3>  -->
     </div>
     <div class="bottom">
